<resources>
    <string name="app_name">ScanAndSave</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="register">Register</string>
    <string name="first_name">First name</string>
    <string name="last_name">Last name</string>
    <string name="item_name">Item name</string>
    <string name="empty" />
    <string name="wrong_password">Wrong password</string>
    <string name="simple_receipt">Simple receipt</string>
    <string name="detailed_receipt">Detailed receipt</string>
    <string name="scan_receipt">Scan receipt</string>
    <string name="add_new_simple_receipt">Add new simple receipt</string>
    <string name="add_new_detailed_receipt">Add new detailed receipt</string>
    <string name="add_new_item">Add new item</string>
    <string name="add_new_category">Add new category</string>
    <string name="set_category">Set receipt category</string>
    <string name="edit_receipt_item">Edit receipt item</string>
    <string name="store">Store</string>
    <string name="description">Description</string>
    <string name="category_name">Category name</string>
    <string name="amount">Amount</string>
    <string name="add">Add</string>
    <string name="retake">Retake</string>
    <string name="total">Total</string>
    <string name="receipt_items">Receipt items</string>
    <string name="date">Date</string>
    <string name="edit">Edit</string>
    <string name="delete">Delete</string>
    <string name="price">Price</string>
    <string name="receipts">Receipts</string>
    <string name="repeat">Repeat</string>
    <string name="price_not_valid">Price is not valid</string>
    <string name="category_not_valid">Category name is not unique</string>
    <string name="receipts_loading_error">Receipts failed to load</string>
    <string name="categories_loading_error">Categories failed to load</string>
    <string name="saving_error">Saving failed</string>
    <string name="delete_error">Delete failed</string>
    <string name="missing_items">There might be some missing items in receipt</string>
    <string name="dashboard">Dashboard</string>
    <string name="profile">Profile</string>
    <string name="settings">Settings</string>
    <string name="preferences">Preferences</string>
    <string name="scheduled">Scheduled</string>
    <string name="open">Open</string>
    <string name="close">Close</string>
    <string name="no_items">There are no items in this list</string>
    <string name="scan_results_error">Scan results error</string>
    <string name="camera_torch">Torch</string>
    <string name="capture_photo">Photo</string>
    <string name="finish_scan">Scan</string>

    <string name="camera_permission_rationale">This app needs access to your camera so you can take pictures.</string>
</resources>