<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingStart="@dimen/marginXXL"
        android:paddingEnd="@dimen/marginXXL"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:orientation="vertical">

        <hr.bm.scanandsave.ui.views.CustomInputLayout
            android:id="@+id/usernameLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/marginM"
            style="@style/InputFieldLayoutStyle">

            <EditText
                android:id="@+id/username"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="@style/InputFieldStyle"
                android:hint="@string/username"/>

        </hr.bm.scanandsave.ui.views.CustomInputLayout>

        <hr.bm.scanandsave.ui.views.CustomInputLayout
            android:id="@+id/passwordLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/marginM"
            style="@style/InputFieldLayoutStyle">

            <EditText
                android:id="@+id/password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="@style/InputFieldStyle"
                android:hint="@string/password"/>

        </hr.bm.scanandsave.ui.views.CustomInputLayout>

        <TextView
            android:id="@+id/btnLogin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/ButtonStyle"
            android:text="@string/login" />

    </LinearLayout>

    <FrameLayout
        android:id="@+id/layoutProgressBar"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:alpha="0.5"
        android:background="@color/colorGrey"
        android:visibility="visible"
        android:clickable="true"
        android:focusable="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ProgressBar
            android:id="@+id/progressBar"
            style="@style/ProgressBar"/>

    </FrameLayout>

</androidx.constraintlayout.widget.ConstraintLayout>